# Simula

./: .Xdefaults  .editorconfig  .envrc  .gitignore  .gitmodules  BUILD.md  BUILD_WITHOUT_NIX.md  CONTRIBUTING.md  Consent.md  LICENSE  Laser.tscn  Makefile  Milkyway.png.import  NixHelpers.sh  README.md  README.org  SVR.png.import  Simula.cabal  Simula.nix  Simula.tscn  SimulaHS.cabal  TODO.md  UbuntuHelpers.sh  build.sh  config.dhall  cursor.png.import  cursor_plus.png.import  default.nix  export_presets.cfg  flake.nix  godot  godot.desktop  icon.png.import  justfile  nix-forced-version.nix  nixpkgs-version.json  package.yaml  pinned-nixpkgs.nix  project.godot  readthedocs.yml  (+7 more)
.github/: FUNDING.yml
.import/: Milkyway.png-c8038416f38c889c516f7e41b5681a1a.md5  cursor.png-9207886fa5a62b74129e260ee150454e.md5  cursor.png-9207886fa5a62b74129e260ee150454e.stex  cursor_plus.png-212eeb5a556fb5123d58256cfbcfcce0.md5  cursor_plus.png-212eeb5a556fb5123d58256cfbcfcce0.stex  godot.png-5e0da45ed3d6786d5794553e04f58a8c.md5  godot.png-5e0da45ed3d6786d5794553e04f58a8c.stex  icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex  splash.png-929ed8a00b89ba36c51789452f874c77.md5  splash.png-929ed8a00b89ba36c51789452f874c77.stex
addons/godot-haskell-plugin/: CanvasAR.gdns  CanvasBase.gdns  CanvasClearShader.tres  CanvasPassthroughShader.tres  CanvasPremulShader.tres  CanvasSurface.gdns  ChangeLog.md  CubeMaker.gdns  LICENSE  LeapMotion.gdns  Makefile  PancakeCamera.gdns  README.md  RenderTarget.gdns  Simula.gdns  SimulaCanvasItem.gdns  SimulaController.gdns  SimulaServer.gdns  SimulaViewSprite.gdns  SimulaViewTexture.gdns  TextShader.tres  TextShader2D.tres  TextShaderOpaque.tres  WestonCompositor.gdns  WestonSurfaceSprite.gdns  WestonSurfaceTexture.gdns  WlrootsCompositor.gdns  WlrootsSurfaceSprite.gdns  WlrootsSurfaceTexture.gdns  cabal.project  default.nix  godot-haskell-gdwlroots.sh  godot-haskell-plugin-dev.nix  godot-haskell-plugin.cabal  godot-haskell-plugin.gdns  godot-haskell-plugin.nix  hie.yaml  justfile  libgodot-haskell-plugin.gdnlib  shell.nix  (+3 more)
addons/godot-haskell-plugin/cbits/: Makefile  flib.c  wlr_godot_backend.c
addons/godot-haskell-plugin/demo/: Demo.gd  Demo.tscn
addons/godot-haskell-plugin/demo/scenes/: Room.tscn
addons/godot-haskell-plugin/demo/scenes/Room/door/: Door.gd  Door.tscn
addons/godot-haskell-plugin/demo/scenes/Room/entities/: Ceiling_Lamp.tscn
addons/godot-haskell-plugin/demo/scenes/Room/entities/Ceiling_Lamp/: ceiling_lamp.obj.import
addons/godot-haskell-plugin/demo/scenes/Room/entities/room_01/: room_01.mtl  room_01.obj.import
addons/godot-haskell-plugin/demo/scenes/Room/materials/wall/: Bricks_1024_albedo.jpg.import  Bricks_1024_normal.jpg.import  Bricks_1024_roughness.jpg.import
addons/godot-haskell-plugin/demo/scenes/Room/materials/wooden_floor/: wooden_floor_d.jpg.import  wooden_floor_n.jpg.import
addons/godot-haskell-plugin/flib/: FLib.hs
addons/godot-haskell-plugin/include/: Makefile  wlr_godot_backend.h
addons/godot-haskell-plugin/meson/: allow-dirs-outside-of-prefix.patch  fix-rpath.patch  gir-fallback-path.patch
addons/godot-haskell-plugin/nix/: libdrm.nix  wayland-protocols.nix  wayland.nix  wlroots.nix
addons/godot-haskell-plugin/nix/godot/: default.nix
addons/godot-haskell-plugin/nix/libinput/: default.nix  udev-absolute-path.patch
addons/godot-haskell-plugin/nix/meson/: default.nix  setup-hook.sh
addons/godot-haskell-plugin/no-telemetry/: Telemetry.hs
addons/godot-haskell-plugin/simula-wayland/: shell.nix  simula-wayland.cabal  stack.yaml
addons/godot-haskell-plugin/simula-wayland/cbits/: motorcar.xml  util.c  util.h  xwayland.c
addons/godot-haskell-plugin/simula-wayland/src/Simula/: WaylandServer.chs  Weston.chs  WestonDesktop.chs
addons/godot-haskell-plugin/src/: Plugin.hs  Simula.hs
addons/godot-haskell-plugin/src/Debug/: C.hs  Marshal.hs  Types.hs
addons/godot-haskell-plugin/src/Plugin/: CanvasAR.hs  CanvasBase.hs  CanvasSurface.hs  CubeMaker.hs  Debug.hs  Imports.hs  Input.hs  Instances.hs  LeapMotion.hs  PancakeCamera.hs  Pointer.hs  RenderTarget.hs  Server.hs  Simula.hs  SimulaCanvasItem.hs  SimulaController.hs  SimulaServer.hs  SimulaViewSprite.hs  SimulaViewTexture.hs  Telekinesis.hs  Types.hs  Util.hs  VR.hs  WaylandTypes.hs  Weston.hs  WestonSurfaceSprite.hs  WestonSurfaceTexture.hs  Window.hs  Wlroots.hs  WlrootsSurfaceSprite.hs  WlrootsSurfaceTexture.hs
addons/godot-haskell-plugin/src/Plugin/Debug/: DamagedRegionTypes.hs  DamagedRegions.hs  HUD.hs  HudTypes.hs  MemoryHud.hs  MemoryHudTypes.hs  MonadoHud.hs  MonadoHudGC.hs  MonadoHudOpenXRFrameTiming.hs  MonadoHudParse.hs  MonadoHudSnapshot.hs  MonadoHudState.hs  MonadoHudTypes.hs  ProfileHud.hs  ProfileHudTypes.hs
addons/godot-haskell-plugin/src/Plugin/Input/: Grab.hs  HandTelekinesis.hs  Telekinesis.hs
addons/godot-haskell-plugin/src/Plugin/Util/: Operators.hs  Types.hs  Variants.hs
addons/godot-haskell-plugin/telemetry/: Telemetry.hs
addons/godot-haskell-plugin/tests/: Spec.hs
addons/godot-haskell-plugin/tests/Plugin/Debug/: HUDSpec.hs
app/: BaseCompositor.hs  GenericCompositor.hs  OsvrCompositor.hs  SimpleCompositor.hs  SimulaVR.hs  ViveCompositor.hs
config/: HTC_Vive.json  HTC_Vive_meshdata.json  HUD.config  ViveDirectMode.json  ViveExtendedMode.json  active_runtime.json  config.dhall  i3status.config  renderManager.direct.landscape.json  renderManager.extended.landscape.json  simula_monado_config.json
doc/: DEPENDENCY_GRAPH.dot  GitterBadge.png.import  Makefile  (+2 more)
game/: Makefile  (+9 more)
simula-osvr/: OSVR-Core.nix  OSVR-Vive.nix  libfunctionality.nix  shell.nix  simula-osvr.cabal  stack.yaml
simula-osvr/src/Simula/: OSVR.chs
simula-wayland/: package.yaml  shell.nix  simula-wayland.cabal  stack.yaml  weston2.nix  weston3.nix
simula-wayland/cbits/: Makefile  helpers.h  motorcar-client-protocol.h  motorcar-server-protocol.h  motorcar-wayland-extensions.c  stub.c  util.c  util.h  xwayland.c
simula-wayland/src/Simula/: MotorcarServer.chs  WaylandServer.chs  Weston.chs  WestonDesktop.chs
(+286 files in other folders)
