name:           simula-osvr
version:        0.0.0
synopsis:       Haskell bindings for OSVR
author:         David Kraeutmann <kane@kane.cx>
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  default-extensions: GADTs ConstraintKinds KindSignatures StandaloneDeriving FlexibleInstances FlexibleContexts MultiParamTypeClasses FunctionalDependencies ScopedTypeVariables RankNTypes RecursiveDo DefaultSignatures PatternSynonyms LambdaCase ForeignFunctionInterface QuasiQuotes TemplateHaskell OverloadedStrings TypeInType TypeFamilies AllowAmbiguousTypes RecordWildCards
  build-depends:
      base >= 4.9 && < 5
    , containers
    , linear
    , unix
  build-tools:
      c2hs
  exposed-modules:
      Simula.OSVR
  default-language: Haskell2010
  extra-libraries:
      osvrClientKit
  -- pkgconfig-depends: ?
  --     osvrClientKit  ?
