name:           simula-wayland
version:        0.0.0
synopsis:       Haskell bindings for Wayland
author:         David Kraeutmann <kane@kane.cx>
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  default-extensions: GADTs ConstraintKinds KindSignatures StandaloneDeriving FlexibleInstances FlexibleContexts MultiParamTypeClasses FunctionalDependencies ScopedTypeVariables RankNTypes RecursiveDo DefaultSignatures PatternSynonyms LambdaCase ForeignFunctionInterface QuasiQuotes TemplateHaskell OverloadedStrings
  include-dirs:
      cbits
  c-sources:
      cbits/motorcar-wayland-extensions.c
  build-depends:
      base >= 4.9 && < 5
    , containers
    , inline-c
  build-tools:
      c2hs
  exposed-modules:
      Simula.WaylandServer
      Simula.MotorcarServer
      Simula.Weston
  default-language: Haskell2010
  pkgconfig-depends:
      libweston-1
    , wayland-server