name: godot-haskell-plugin
version: 0.1.0.0
description: Please see the README on Github at <https://github.com/SimulaVR/Simula#readme>
homepage: https://github.com/SimulaVR/Simula#readme
bug-reports: https://github.com/SimulaVR/SImula/issues
author: Simula Team
maintainer: simulavr@gmail.com
copyright: 2018
license: Apache
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type: git
  location: https://github.com/SimulaVR/Simula/addons/godot-haskell-plugin

flag no-tracking
  default: False
  manual: True

library
  if flag(no-tracking)
    hs-source-dirs:
      src
      no-telemetry
  else
    hs-source-dirs:
      src
      telemetry

  c-sources:
    cbits/flib.c

  -- cbits/xdg-shell-protocol.c
  -- include-dirs:
  --     include
  build-depends:
    QuickCheck,
    aeson,
    base,
    base64-bytestring,
    bytestring,
    clock,
    colour,
    containers,
    dhall,
    directory,
    extra,
    filepath,
    godot-haskell,
    hspec,
    hspec-core,
    http-client,
    http-client-tls,
    http-types,
    inline-c,
    io-streams,
    iso8601-time,
    lens,
    linear,
    ordered-containers,
    path,
    path-io,
    process,
    process-extras,
    raw-strings-qq,
    safe-exceptions,
    stm,
    text,
    time,
    unix,
    uuid,
    vector

  exposed-modules:
    Plugin
    Plugin.CanvasAR
    Plugin.CanvasBase
    Plugin.CanvasSurface
    Plugin.Debug
    Plugin.Debug.DamagedRegionTypes
    Plugin.Debug.DamagedRegions
    Plugin.Debug.HUD
    Plugin.Debug.HudTypes
    Plugin.Debug.MemoryHud
    Plugin.Debug.MemoryHudTypes
    Plugin.Debug.MonadoHud
    Plugin.Debug.MonadoHudGC
    Plugin.Debug.MonadoHudOpenXRFrameTiming
    Plugin.Debug.MonadoHudParse
    Plugin.Debug.MonadoHudSnapshot
    Plugin.Debug.MonadoHudState
    Plugin.Debug.MonadoHudTypes
    Plugin.Debug.ProfileHud
    Plugin.Debug.ProfileHudTypes
    Plugin.Imports
    Plugin.Input
    Plugin.Input.Grab
    Plugin.Input.HandTelekinesis
    Plugin.Input.Telekinesis
    Plugin.PancakeCamera
    Plugin.Pointer
    Plugin.Simula
    Plugin.SimulaController
    Plugin.SimulaServer
    Plugin.SimulaViewSprite
    Plugin.Types
    Plugin.VR
    Telemetry

  -- Debug.C
  -- Debug.Marshal
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    TypeApplications
    TypeOperators

  ghc-options:
    -fno-warn-unused-do-bind
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -fobject-code
    -g2
    -threaded
    -eventlog
    -with-rtsopts=-T

-- | After adding hsroots, we are forced to copy cabal fields for `library`
-- down to `foreign-library godot-haskell-plugin` (unclear why).
-- TODO: Switch to package.yaml pending on this change: https://github.com/sol/hpack/issues/258
foreign-library godot-haskell-plugin
  if flag(no-tracking)
    hs-source-dirs:
      src
      no-telemetry
      flib
  else
    hs-source-dirs:
      src
      telemetry
      flib

  type: native-shared

  if os(windows)
    options: standalone
  other-modules:
    Plugin
    Plugin.CanvasAR
    Plugin.CanvasBase
    Plugin.CanvasSurface
    Plugin.Debug
    Plugin.Debug.DamagedRegionTypes
    Plugin.Debug.DamagedRegions
    Plugin.Debug.HUD
    Plugin.Debug.HudTypes
    Plugin.Debug.MemoryHud
    Plugin.Debug.MemoryHudTypes
    Plugin.Debug.MonadoHud
    Plugin.Debug.MonadoHudGC
    Plugin.Debug.MonadoHudOpenXRFrameTiming
    Plugin.Debug.MonadoHudParse
    Plugin.Debug.MonadoHudSnapshot
    Plugin.Debug.MonadoHudState
    Plugin.Debug.MonadoHudTypes
    Plugin.Debug.ProfileHud
    Plugin.Debug.ProfileHudTypes
    Plugin.Imports
    Plugin.Input
    Plugin.Input.Grab
    Plugin.Input.HandTelekinesis
    Plugin.Input.Telekinesis
    Plugin.PancakeCamera
    Plugin.Pointer
    Plugin.Simula
    Plugin.SimulaController
    Plugin.SimulaServer
    Plugin.SimulaViewSprite
    Plugin.Types
    Plugin.VR
    Telemetry

  -- Debug.C
  -- Debug.Marshal
  other-modules: FLib
  ghc-options:
    -fno-warn-unused-do-bind
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -fobject-code
    -g2
    -threaded
    -eventlog
    -with-rtsopts=-T

  build-depends:
    QuickCheck,
    aeson,
    base,
    base64-bytestring,
    bytestring,
    clock,
    colour,
    containers,
    dhall,
    directory,
    extra,
    filepath,
    godot-haskell,
    hspec,
    hspec-core,
    http-client,
    http-client-tls,
    http-types,
    inline-c,
    io-streams,
    iso8601-time,
    lens,
    linear,
    ordered-containers,
    path,
    path-io,
    process,
    process-extras,
    raw-strings-qq,
    safe-exceptions,
    stm,
    text,
    time,
    unix,
    uuid,
    vector

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    TypeApplications
    TypeOperators

  c-sources:
    cbits/flib.c

  default-language: Haskell2010
