name:           simula-wayland
version:        0.0.0
synopsis:       Haskell bindings for Wayland
author:         David Kraeutmann <kane@kane.cx>
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  default-extensions: GADTs ConstraintKinds KindSignatures StandaloneDeriving FlexibleInstances FlexibleContexts MultiParamTypeClasses FunctionalDependencies ScopedTypeVariables RankNTypes RecursiveDo DefaultSignatures PatternSynonyms LambdaCase ForeignFunctionInterface QuasiQuotes TemplateHaskell OverloadedStrings TypeInType TypeFamilies AllowAmbiguousTypes RecordWildCards
  include-dirs:
      cbits
  c-sources:
      cbits/motorcar-wayland-extensions.c
      cbits/stub.c
      cbits/util.c      
      cbits/xwayland.c      
  build-depends:
      base >= 4.9 && < 5
    , containers
    , inline-c
    , linear
    , unix
  build-tools:
      c2hs
  cpp-options:
      "-D_BITS_FLOATN_H"
  exposed-modules:
      Simula.WaylandServer
      Simula.MotorcarServer
      Simula.Weston
      Simula.WestonDesktop                  
  default-language: Haskell2010
  pkgconfig-depends:
      pixman-1
    ,  egl
    , wayland-server
  extra-libraries:
      weston-3
    , weston-desktop-3

  lib-dirs:
      install/weston/.libs

  include-dirs:
      install/weston/.libs
    , install/weston/libweston-desktop
    , install/weston/xwayland
    , install/weston/libweston
    , install/weston/shared